--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -68,6 +68,7 @@
         <div class="span5 logo">
 <!--           <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
             <h1>Fun Runs 2k15: About</h1>
+          <button class="btn btn-small btn-inverse" type="button"><a href="/search" style="color: white">Search</a></button>            
         </div>
         
         <!-- Main Navigation
