--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -64,6 +64,7 @@
         ================================================== -->
         <div class="span5 logo">
             <h1>Fun Runs 2k15: Technical Information</h1>
+          <button class="btn btn-small btn-inverse" type="button"><a href="/search" style="color: white">Search</a></button>            
         </div>
         
         <!-- Main Navigation
@@ -121,7 +122,7 @@
                     <p>
                         <i class="icon-cog"></i><strong>Commits: </strong>98 <br/>
                         <i class="icon-list"></i><strong>Issues: </strong>147 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
+                        <i class="icon-check"></i><strong>Unit Tests: </strong>17 <br/>
                         <i class="icon-star"></i><strong>Major Responsibilities: </strong>Bootstrap, nginx, uWSGI, initial setup, data mining, github issue tracking, front end design, and angular. <br/>
                     </p>
                 </div>
@@ -143,7 +144,7 @@
                     <p>
                         <i class="icon-cog"></i><strong>Commits: </strong>100 <br/>
                         <i class="icon-list"></i><strong>Issues: </strong>21 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
+                        <i class="icon-check"></i><strong>Unit Tests: </strong>17 <br/>
                         <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, bug fixes, embedding media, database, data mining, initial setup, nginx and bootstrap. <br/>
                     </p>
                 </div>
@@ -167,7 +168,7 @@
                     <p>
                         <i class="icon-cog"></i><strong>Commits: </strong>42 <br/>
                         <i class="icon-list"></i><strong>Issues: </strong>23 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
+                        <i class="icon-check"></i><strong>Unit Tests: </strong>18 <br/>
                         <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, data mining, using angular to dynamically fill pages, and embedding media. <br/>
 					</p>
                 </div>
@@ -178,7 +179,8 @@
                     <p>
                         <i class="icon-cog"></i><strong>Commits: </strong>28 <br/>
                         <i class="icon-list"></i><strong>Issues: </strong>17 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
+                        <i class="icon-check"></i><strong>Unit Tests: </strong>
+                        30 <br/>
                         <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, data mining, using angular to dynamically fill pages, and embedding media. <br/>
                     </p>
                 </div>
