--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -84,6 +84,8 @@ $(document).ready(function () {
       <div class="span5 logo">
 <!--         <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
           <h1>Fun Runs 2K15!</i></h1>
+          <button class="btn btn-small btn-inverse" type="button"><a href="/search" style="color: white">Search</a></button>
+
       </div>
       
       <!-- Main Navigation
