--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="ThemeModule" ng-controller="ThemeGetter">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="FunRunModule" ng-controller="FunRunGetter">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Fun Runs 2015: Themes</title>
+<title>Fun Runs 2015: Fun Runs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- CSS
@@ -34,76 +34,38 @@
 <script src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.quicksand.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
+
 <script>
-  var myApp = angular.module('ThemeModule', [], function($interpolateProvider) {
+  var myApp = angular.module('FunRunModule', [], function($interpolateProvider) {
       $interpolateProvider.startSymbol('[[');
       $interpolateProvider.endSymbol(']]');
   });
 
-  myApp.controller('ThemeGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
+  myApp.controller('FunRunGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
 
-    // Default Order = Sort Name
-    $http.get("http://104.239.139.43:8000/api/themes/?sort=name:asc").success(function(data) {
-      $scope.order = "asc";
-      $scope.sort = "name";      
-      $scope.themes = data.themes;
-      console.log($scope.themes);
-    });
+      // Default Order = Sort Name
+      $http.get("/api/funruns/?sort=name:asc").success(function(data) {
+        $scope.order = "asc";
+        $scope.sort = "name";
+        $scope.funruns = data.funruns;
+        console.log($scope.funruns);
+      });
 
       // Sort Name
       $('#sort_name').on('click', function() {
-        $http.get("/api/themes/?sort=name:" + $scope.order).success(function(data) {
+        $http.get("/api/funruns/?sort=name:" + $scope.order).success(function(data) {
           $scope.sort = "name";
-          $scope.themes = data.themes;
-          console.log($scope.themes);
+          $scope.funruns = data.funruns;
+          console.log($scope.funruns);
         });
       });
-
-      // Sort Challenges
-      $('#sort_challenges').on('click', function() {
-        $http.get("/api/themes/?sort=number_of_challenges:" + $scope.order).success(function(data) {
-          $scope.sort = "number_of_challenges";
-          $scope.themes = data.themes;
-          console.log($scope.themes);
-        });
-      });
-
-      // Sort Runs
-      $('#sort_runs').on('click', function() {
-        $http.get("/api/themes/?sort=number_of_runs:" + $scope.order).success(function(data) {
-          $scope.sort = "number_of_runs";
-          $scope.themes = data.themes;
-          console.log($scope.themes);
-        });
-      });
-
-      // Ascending
-      $('#asc').on('click', function() {
-        if($scope.order === "desc") {
-          $http.get("/api/themes/?sort=" + $scope.sort + ":asc").success(function(data) {
-            $scope.order = "asc";
-            $scope.themes = data.themes;
-            console.log($scope.themes);
-          });
-        }
-      });  
-
-      // Descending
-      $('#desc').on('click', function() {
-        if($scope.order === "asc") {
-          $http.get("/api/themes/?sort=" + $scope.sort + ":desc").success(function(data) {
-            $scope.order = "desc";
-            $scope.themes = data.themes;
-            console.log($scope.themes);
-          });
-        }
-      });        
+         
   }]);
 </script>
 
 </head>
 
-<body>
+<body> 
   <div class="color-bar-1"></div>
     <div class="color-bar-2 color-bg"></div>
     
@@ -115,7 +77,7 @@
         ================================================== -->
         <div class="span5 logo">
           <!-- <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
-            <h1>Fun Runs 2K15: Themes</h1>
+            <h1>Fun Runs 2K15: Search</h1>
           <button class="btn btn-small btn-inverse" type="button"><a href="/search" style="color: white">Search</a></button>            
         </div>
         
@@ -127,7 +89,7 @@
             <ul class="nav">
               <li><a href="/">Home</a></li>
               <li><a href="/funruns">Fun Runs</a></li>
-              <li class="active"><a href="/themes">Fun Themes</a></li>
+              <li><a href="/themes">Fun Themes</a></li>
               <li><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
               <li><a href="/tech">Technical</a></li>
@@ -152,45 +114,39 @@
                 </select>
               </div>
             </form>
-            
         </div>
       
     </div><!-- End Header -->
      
+
     <!-- Page Content
     ================================================== --> 
     <div class="row">
 
         <!-- Gallery Items
         ================================================== --> 
-        <div class="span12">
-        <h6 class="title-bg">CURRENT SORT: By [[ sort ]] in [[ order ]]ending order</h6>
-          <div class="gallery-cats pull-left">
-            <li><a href="#" id="sort_name">Name</a></li>
-            <li><a href="#" id="sort_runs">Number Of Related Runs</a></li>
-            <li><a href="#" id="sort_challenges">Number Of Related Challenges</a></li>
-          </div>
-          <div class= "gallery-cats pull-right">
-            <li><a href="#" id="asc">Ascending</a></li>
-            <li><a href="#" id="desc">Descending</a></li>  
-          </div>  
-        </div>        
-
+        <!-- CONTENT -->
         <div class="span12 gallery">
+          <form style="text-align: center" class="form-search">
+            <div class="input-append">
+              <input type="text" class="span2 search-query">
+              <button type="submit" class="btn">Search</button>
+            </div>
+          </form>
 
-            <!-- CONTENT -->
+
             <div class="row clearfix">
               <ul class="gallery-post-grid holder">
-                <div ng-repeat="theme in themes">
-                  <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a ng-href="http://104.239.139.43:8000/themes/[[ theme.id ]]">
+                <div ng-repeat="result in results">
+                  <li  class="span4 gallery-item">
+                      <a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                          <img ng-src="[[theme.landing_img]]" alt="Gallery" class="grayscale">
+                          <img ng-src="[[run.landing_img]]" alt="Gallery" class="grayscale">
                         </div>
                       </a>
-                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/themes/[[ theme.id ]]">[[theme.name]]</a>[[theme.short]]</span>
+                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">[[run.name]]</a>[[run.date]] | [[run.distance]] course<br/>[[run.short]]</span>
                     </li>
                 </div>
               </ul>
@@ -213,7 +169,7 @@
     </div><!-- End container row -->
     
     </div> <!-- End Container -->
-
+    
  <!-- Footer Area
   ================================================== -->
 
