--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -221,7 +221,7 @@
         </div> 
 
         <div class="span6">
-            <a class="twitter-timeline" href="https://twitter.com/FlaskMeAnything/lists/fun-runs" data-widget-id="582725442076983296" data-theme="dark">Tweets from https://twitter.com/FlaskMeAnything/lists/fun-runs</a>
+            <a class="twitter-timeline" href="https://twitter.com/FlaskMeAnything/lists/fun-runs" data-widget-id="582725442076983296" data-theme="light">Tweets from https://twitter.com/FlaskMeAnything/lists/fun-runs</a>
         </div>
     </div>
     
