Updated image name from .jpg to .png

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -220,35 +220,35 @@
                     <li><strong>Bootstrap</strong></li>
                      <p> Bootstrap is an open source framework that uses HTML, CSS, and JS. It helped both speed up and ease our front end development because of how flexible it is. </p>
                     <li><strong>Piccolo</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/piccoloLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/piccoloLogo.png') }}" alt="image">
                     <p> Piccolo is a bootstrap HTML template. We implemented this tool to enhance the presentation of our application and give it a more aesthethically pleasing appearance.</p>
                     <li><strong>nginx</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/ngingxLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/ngingxLogo.png') }}" alt="image">
                     <p> nginx is a high-performance HTTP server and reverse proxy. This tool was used to serve our application by handling the requests sent by our API. </p>
                     <li><strong>uWSGI</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/uwsgiLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/uwsgiLogo.png') }}" alt="image">
                     <p> uWSGI is a deployment option for severs. Because we decided to use nginx, combining it with uWSGI gives us more flexibility and better performance because of the configurations it offers.  </p>
                     <li><strong>Apiary</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/apiaryLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/apiaryLogo.png') }}" alt="image">
                     <p> Apiary is a tool that allowed for an easier, faster and more efficient creation of our API. It offers different tools to prototype your API and configure it to your liking. </p>
                     <li><strong>Github</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/githubLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/githubLogo.png') }}" alt="image">
                     <p> Github is a web-based Git repository. Since the project is being worked on
                     by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development and version control. </p>
                     <li><strong>Rackspace</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/rackspaceLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/rackspaceLogo.png') }}" alt="image">
                     <p> Rackspace has allowed our team to host our application using one of their virtual machines which has 1gb RAM and 20gb of storage. </p>
                     <li><strong>Javascript/AngularJS</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/angularLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/angularLogo.png') }}" alt="image">
                     <p> Angular is a web application framework that allows us to dynamically fill the pages with content. We utilized Angular by calling GET on our RESTful API and using the content to fill a template page for each race/theme/challenge. It has been a great tool for separating our front end from the back end.</p>
                     <li><strong>Jinja2</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/jinjaLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/jinjaLogo.png') }}" alt="image">
                     <p> Jinja is a templating framework that comes with Flask. It allows us to push information through our funruns app file straight to the page, but is not a good way to decouple the front end from the back end. Therefore, it is used sparingly and only in the template pages to provide an ID of what page to load.</p>
                     <li><strong>PostgreSQL</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/postgreLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/postgreLogo.png') }}" alt="image">
                     <p> PostgreSQL is an open source object-relational database system. We currently store our data in the database within four tables, mirroring our pillars</p>
                     <li><strong>SQLAlchemy</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/sqlalchemyLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/sqlalchemyLogo.png') }}" alt="image">
                     <p>SQLAlchemy is a Python SQL toolkit and Object Relational Mapper that interacts between our application and the database system.</p>
                 </div>
             </div>
