--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -49,7 +49,21 @@
         // Default Order = Sort Name
         $http.get("/api/search?q=" + $scope.inputQuery).success(function(data) {
           $scope.payload = data;
+          $scope.and_results = data.results.and_results;
+
+          // AND PILLARS
+          $scope.and_challenges = $scope.and_results.challenges;
+          $scope.and_funruns = $scope.and_results.funruns;
+          $scope.and_themes = $scope.and_results.themes;
+          $scope.and_locations = $scope.and_results.locations;
+
+          // OR PILLARS
+          $scope.or_results = data.results.or_results;          
+          console.log($scope.and_results);
+          console.log($scope.or_results);
           console.log($scope.payload);
+          console.log($scope.and_themes)
+
         });
       }  
   }]);
@@ -130,10 +144,10 @@
 
             <div class="row clearfix">
               <ul class="gallery-post-grid holder">
-                <div ng-repeat="result in results">
-                  <li  class="span4 gallery-item">
-                      <a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
+                <div ng-repeat="chall in and_challenges">
+                  <li class="span4 gallery-item">
+                      <a ng-href="http://104.239.139.43:8000/funruns/[[ chall.object.id ]]">
+                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                           <img ng-src="[[run.landing_img]]" alt="Gallery" class="grayscale">
