--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -217,7 +217,7 @@
                     <img src="{{ url_for('static', filename='img/tools/pythonLogo.png') }}" alt="image">
                     <p> Python is one of the languages used to help bring our application to life. Its functionality allows for easy data manipulation. In combination with other tools, its syntax provides for easier interpretation and cleaner presentation.</p>
                     <li><strong>Flask</strong></li>
-                    <img src="{{ url_for('static', filename='img/tools/flaskLogo.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/tools/flaskLogo.png') }}" alt="image">
                     <p> Flask is a microframework for Python and serves as the foundation for our application. It uses Jinja2 templating and RESTful request dispatching. This tool helped facilitate our web application development process overall.</p>
                     <li><strong>Bootstrap</strong></li>
                     <img src="{{ url_for('static', filename='img/tools/bootstrapLogo.png') }}" alt="image">
