--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -185,6 +185,13 @@
                     </p>
                 </div>
             </div>
+            <hr>
+            <div><center>
+                <p><strong>Total Github Commits:</strong> 581</p>
+
+                <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
+                   <a href="http://docs.funruns2k15.apiary.io/"> Apiary</a><br/><br/>
+           </center></div>
 
             <h2 class="title-bg">Test Output</h2>
             <div class="row">
@@ -255,12 +262,7 @@
                     <p>SQLAlchemy is a Python SQL toolkit and Object Relational Mapper that interacts between our application and the database system.</p>
                 </div>
             </div>
-            <div>
-                <p><strong>Total Github Commits:</strong> 581</p>
-            </div>
 
-            <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
-	    <a href="http://docs.funruns2k15.apiary.io/"> Apiary</a><br/><br/>
         </div> 
     </div>
     
